Inmob-Salesforce/force-app/main/default/objects/Manzana__c/Manzana__c.object-meta.xml
<CustomObject>
    <label>Manzana</label>
    <nameField>
        <label>Nombre de Manzana</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Manzanas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>