Inmob-Salesforce/force-app/main/default/objects/Manzana__c/fields/CI_Codigo_Manzana__c.field-meta.xml
<CustomField>
    <fullName>CI_Codigo_Manzana__c</fullName>
    <label>Código de Manzana</label>
    <length>50</length>
    <type>Text</type>
</CustomField>