Inmob-Salesforce/force-app/main/default/objects/Manzana__c/fields/Codigo_Etapa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Etapa__c</fullName>
    <label>Código Étapa</label>
    <length>5</length>
    <type>Text</type>
</CustomField>