Inmob-Salesforce/force-app/main/default/objects/Manzana__c/fields/Etapa__c.field-meta.xml
<CustomField>
    <fullName>Etapa__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Etapa</label>
    <referenceTo>Urbanizacion__c</referenceTo>
    <relationshipLabel>Manzanas</relationshipLabel>
    <relationshipName>Manzanas</relationshipName>
    <type>Lookup</type>
</CustomField>