Inmob-Salesforce/force-app/main/default/objects/Manzana__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Codigo_Empresa__c</columns>
    <columns>Codigo_Etapa__c</columns>
    <columns>Codigo_Proyecto__c</columns>
    <columns>Etapa__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Etapa__c</field>
        <operation>equals</operation>
        <value>SALAMANCA</value>
    </filters>
    <label>Todos</label>
</ListView>